# pre-commit-sbom-check

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  sbom.json
.github/workflows/: dependabot-pre-commit.yml  pre-commit-autoupdate.yml  pre-commit-checks.yml
scripts/: generate_and_compare_sbom.sh
