[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=64", "setuptools-scm>=8" ]

[project]
name = "pre-commit-sbom-check"
description = "Pre-commit hook for checking a software bill of materials (SBOM) within a repository."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [
  "sbomdiff>=0.5.6",
]

[tool.setuptools_scm]
root = "."

[tool.jupytext]
formats = "ipynb,py:light"

[tool.uv]
dev-dependencies = [
  "pre-commit>=4.0.1",
]
